favorite icon in GalleryViewer
Former-commit-id: f2619038825d7d48eaa3e584e80ee55c15b6a787 [formerly 856aaec2973212c761251ca445e62509bc01cc55]
Former-commit-id: 499d754ba477d23dc4b785ad403caa6fd9095027

--- a/ExViewer/Controls/GalleryViewer.xaml
+++ b/ExViewer/Controls/GalleryViewer.xaml
@@ -58,10 +58,15 @@
                                HorizontalAlignment="Left" />
             <TextBlock Text="{x:Bind Gallery.RecordCount, Mode=OneWay, Converter={StaticResource StringConverter}, ConverterParameter='GalleryViewerRecordCountFormatString'}"
                        Grid.Row="4" />
-            <TextBlock Text="{x:Bind Gallery.Rating, Mode=OneWay, Converter={StaticResource RateStringConverter}}"
+            <StackPanel Orientation="Horizontal"
+                       Grid.Row="3">
+                <local:FavoriteCategoryPresenter Category="{x:Bind Gallery.FavoriteCategory, Mode=OneWay}" 
+                                                 IsLabelVisible="False"/>
+                <TextBlock Text="{x:Bind Gallery.Rating, Mode=OneWay, Converter={StaticResource RateStringConverter}}"
                        FontFamily="Segoe MDL2 Assets"
-                       VerticalAlignment="Center"
-                       Grid.Row="3" />
+                       VerticalAlignment="Center" />
+                
+            </StackPanel>
             <TextBlock Text="{x:Bind Gallery.Uploader, Mode=OneWay}"
                        Grid.Row="4"
                        MaxLines="1"
