lazyload for favorite tag
Former-commit-id: 6685203e0a31d05048c41473d21eb0c8f9379a1f [formerly f99d78625a61e048ad23ff6b316ac571bced7d2b]
Former-commit-id: 58fb01ef677bf5b8e34310b78bd3993012d03212

--- a/ExViewer/Controls/GalleryViewer.xaml
+++ b/ExViewer/Controls/GalleryViewer.xaml
@@ -60,8 +60,7 @@
                        Grid.Row="4" />
             <StackPanel Orientation="Horizontal"
                        Grid.Row="3">
-                <local:FavoriteCategoryPresenter Category="{x:Bind Gallery.FavoriteCategory, Mode=OneWay}" 
-                                                 IsLabelVisible="False"/>
+                <local:FavoriteCategoryPresenter Category="{x:Bind Gallery.FavoriteCategory, Mode=OneWay}" />
                 <TextBlock Text="{x:Bind Gallery.Rating, Mode=OneWay, Converter={StaticResource RateStringConverter}}"
                        FontFamily="Segoe MDL2 Assets"
                        VerticalAlignment="Center" />
